--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -14,10 +14,10 @@
    limitations under the License.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.google.ar.core.examples.java.helloar.HelloArActivity">
 
   <android.opengl.GLSurfaceView
@@ -30,14 +30,11 @@
       android:id="@+id/settings_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_alignParentTop="true"
       android:layout_alignParentEnd="true"
-      android:layout_marginStart="25dp"
-      android:layout_marginTop="25dp"
-      android:layout_marginEnd="25dp"
-      android:layout_marginBottom="25dp"
-      android:background="@android:color/transparent"
-      android:src="@drawable/ic_settings" />
+      android:layout_alignParentTop="true"
+      android:layout_margin="25dp"
+      android:src="@drawable/ic_settings"
+      android:background="@android:color/transparent"/>
 
   <ImageButton
       android:id="@+id/add_button"
@@ -51,5 +48,6 @@
       android:layout_marginBottom="75dp"
       android:background="@android:color/transparent"
       app:srcCompat="@android:drawable/ic_menu_add" />
+
 
 </RelativeLayout>
